# manuel

./: .cz.json  .gitignore  CHANGELOG.md  CLAUDE.md  COMPREHENSIVE_DELETION.md  CONTRIBUTING.md  CURRENT_STATE.md  ENTERPRISE_BACKEND_PLAN.md  LICENSE  MONITORING_STATUS.md  README.md  REMOTE_SETUP.md  SESSION_CONTEXT.md  SETUP_COMPLETE.md  package-lock.json  package.json  test-ios-query.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backend-ci.yml
backend/: .commitlintrc.json  .cz.json  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  AWS_TEARDOWN_SUMMARY.md  BACKEND_IMPROVEMENT_PLAN.md  CHANGELOG.md  CODE_QUALITY.md  COST_TRACKING.md  METADATA_FILTERING_IMPLEMENTATION.md  MIGRATION_PLAN.md  MONITORING.md  Makefile  PDF_PROCESSING_IMPLEMENTATION.md  PIPELINE_README.md  QUERY_TEST_SUMMARY.md  README.md  REDIS_CACHE_IMPLEMENTATION.md  RUST_MIGRATION_PLAN.md  SECURITY.md  TESTING_GUIDE.md  TEST_CLI_README.md  VOICE_QUERY_IMPLEMENTATION_GUIDE.md  authenticate.js  bandit-report.json  buildspec-build.yml  buildspec-chaos-testing.yml  buildspec-integration-test.yml  create_index.py  deploy-pipeline.sh  package.json  parameters-claude4.json  parameters-dev.json  parameters-migration.json  parameters-production.json  parameters-staging.json  parameters.json  (+16 more)
backend/.github/workflows/: code-quality.yml
backend/scripts/: rollback-to-minimal.sh
backend/specs/: Context.md  DEPLOYMENT_PIPELINE.md  projectplan.md
backend/src/: index.js
backend/src/functions/admin/: app.py
backend/src/functions/backup/: app.py
backend/src/functions/bootstrap/: app.py
backend/src/functions/create-opensearch-index/: check_index.py  handler.py  requirements.txt
backend/src/functions/error-processor/: app.py
backend/src/functions/health/: app.py
backend/src/functions/ingestion-status/: app.py  file_security.py
backend/src/functions/manuals/: app.py
backend/src/functions/pdf-page/: app.py  requirements.txt
backend/src/functions/process-manual/: app.py  cost_calculator.py  file_security.py  s3_optimizer.py  secrets_manager.py  security_headers.py  utils.py
backend/src/functions/process-manual-simple/: app.py
backend/src/functions/query/: app.py  requirements.txt
backend/src/functions/transcribe/: app.py
backend/src/functions/usage/: advanced_error_handler.py  app.py  file_tracker.py  logger.py  performance_metrics.py  performance_optimizer.py  quota_cache.py
backend/src/functions/version/: app.py
backend/src/shared/: admin_auth.py  advanced_error_handler.py  api_versioning.py  cost_calculator.py  health_checker.py  input_validation.py  logger.py  performance_metrics.py  performance_optimizer.py  security_middleware.py  url_downloader.py  utils.py
backend/tests/: Makefile  README.md
backend/tests/integration/: Makefile  README.md  pytest_tests.py  test_config.json  test_framework.py  test_runner.py
backend/tests/integration/fixtures/: pytest.ini  requirements.txt
backend/tests/unit/: __init__.py  conftest.py  pytest.ini  requirements.txt  test_backup_function.py  test_query_function.py  test_usage_function.py
frontend/: .eslintrc.js  AI_IMAGE_GENERATION_STEPS.md  App.js  GRAPHICS_IMPLEMENTATION_GUIDE.md  GRAPHICS_PROJECT_SUMMARY.md  PDF_EXTRACTION_TESTING_GUIDE.md  README.md  app.json  package-lock.json  package.json  test-pdf-extraction.js  tsconfig.json
frontend/assets/: README.md
tmp/: create_index.py  index_mapping.json  test_manual.txt  updated-access-policy-console-admin.json  updated-access-policy-with-user.json  updated-access-policy.json
